--- a/_posts/2020-04-12-covidmiu.md
+++ b/_posts/2020-04-12-covidmiu.md
@@ -9,32 +9,6 @@ content_img_path: images/3.jpg
 layout: post
 ---
 
-**Vis accumsan feugiat** adipiscing nisl amet adipiscing accumsan blandit accumsan sapien blandit ac amet faucibus aliquet placerat commodo. Interdum ante aliquet commodo accumsan vis phasellus adipiscing. Ornare a in lacinia. Vestibulum accumsan ac metus massa tempor.
+[Estensione grid crhome](https://teachfromhome.google/intl/it?utm_source=google&utm_medium=cpc&utm_campaign=edu_google&utm_term=imparare+da+casa&gclid=CjwKCAjwvtX0BRAFEiwAGWJyZM27hw0bsFMrS9xxZf0CcauuTBIHpiByocK2AWY9NYes1Bul4pchOBoC06IQAvD_BwE)
 
-Accumsan in lacinia ornare massa amet. Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan.
 
-```javascript
-switch (type) {
-  case 'Object':
-    id = _.util.objId(o);
-    if (visited[id]) {
-      return visited[id];
-    }
-    clone = {};
-    visited[id] = clone;
-
-    for (var key in o) {
-      if (o.hasOwnProperty(key)) {
-        clone[key] = deepClone(o[key], visited);
-      }
-    }
-    return clone;
-
-  default:
-    return o;
-}
-```
-
-Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet Ac interdum ac non praesent. Cubilia lacinia interdum massa faucibus blandit nullam. Accumsan phasellus nunc integer. Accumsan euismod nunc adipiscing lacinia erat ut sit. Arcu amet. Id massa aliquet arcu accumsan lorem amet accumsan commodo odio cubilia ac eu interdum placerat placerat arcu commodo lobortis adipiscing semper ornare pellentesque.
-
-Amet nibh adipiscing adipiscing. Commodo ante vis placerat interdum massa massa primis. Tempus condimentum tempus non ac varius cubilia adipiscing placerat lorem turpis at. Aliquet lorem porttitor interdum. Amet lacus. Aliquam lobortis faucibus blandit ac phasellus. In amet magna non interdum volutpat porttitor metus a ante ac neque. Nisi turpis. Commodo col. Interdum adipiscing mollis ut aliquam id ante adipiscing commodo integer arcu amet blandit adipiscing arcu ante.
