--- a/_posts/2020-04-12-covidmiu.md
+++ b/_posts/2020-04-12-covidmiu.md
@@ -9,6 +9,8 @@ content_img_path: images/3.jpg
 layout: post
 ---
 
-[Estensione grid crhome](https://teachfromhome.google/intl/it?utm_source=google&utm_medium=cpc&utm_campaign=edu_google&utm_term=imparare+da+casa&gclid=CjwKCAjwvtX0BRAFEiwAGWJyZM27hw0bsFMrS9xxZf0CcauuTBIHpiByocK2AWY9NYes1Bul4pchOBoC06IQAvD_BwE)
+[Risorse per docenti da Google](https://teachfromhome.google/intl/it?utm_source=google&utm_medium=cpc&utm_campaign=edu_google&utm_term=imparare+da+casa&gclid=CjwKCAjwvtX0BRAFEiwAGWJyZM27hw0bsFMrS9xxZf0CcauuTBIHpiByocK2AWY9NYes1Bul4pchOBoC06IQAvD_BwE)
+
+[Estensione per crhome](https://meet.google.com/linkredirect?authuser=1&dest=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fgoogle-meet-grid-view%2Fbjkegbgpfgpikgkfidhcihhiflbjgfic)
 
 
