--- a/_posts/2020-04-12-covidmiu.md
+++ b/_posts/2020-04-12-covidmiu.md
@@ -14,7 +14,7 @@ Una serie di risorse suggerite dal miur per docenti e famiglie per la didattica 
 
 
 <a href="http://www.rai.it/portale/LaScuolaNonSiFerma-b8e35487-a4ca-47d5-9e52-2023ea19a27e.html">
-<img border="0" alt="Rai DaD" src="/images/1586989258925_large.webp" width="100" height="100"></a></p>
+<img border="0" alt="Rai DaD" src="/images/1586989258925_large.webp" width="300" height="300"></a>
 
 
 [Risorse per docenti da Google](https://teachfromhome.google/intl/it?utm_source=google&utm_medium=cpc&utm_campaign=edu_google&utm_term=imparare+da+casa&gclid=CjwKCAjwvtX0BRAFEiwAGWJyZM27hw0bsFMrS9xxZf0CcauuTBIHpiByocK2AWY9NYes1Bul4pchOBoC06IQAvD_BwE)
